# Lab2-Caelan

./: CMakeLists.txt  README.md  Rectangle.cpp  Rectangle.h  main.cpp  operations.cpp  operations.h  tests.cpp
.github/workflows/: cmake.yml
